--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-sm-4">
-                    <div><img class="my_picture mx-auto d-block" src="Appa.jpg" alt="me"></div>
+                    <div><img class="my_picture mx-auto d-block" src="picture.jpg" alt="me"></div>
                 </div>
                 <div class="col-sm-4">
                     <p class="intro"><span class="aboutName" style="color:rgb(0, 0, 0); font-weight: 700; font-size: 1.5em;">About Me</span><br><br> I am a junior studying computer science  
