--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-md">
                             <h2 class="name"> Nicholas Leong</h2>
                             <h3 class="stony"> Stony Brook University '22</h3>
-                            <p>Looking for software engineering/front-end web developement internship for Summer 2021! </p>
+                            <p>Looking for software engineering/web developement internship for Summer 2021! </p>
                         </div>
                     </div>
                 </div>
