--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-md">
                             <h2 class="name"> Nicholas Leong</h2>
                             <h3 class="stony"> Stony Brook University '22</h3>
-                            <p>Looking for software engineering/web developement internship for Summer 2021! </p>
+                            <p>Aspring software engineering/web developer looking for a Summer 2021 internship! </p>
                         </div>
                     </div>
                 </div>
@@ -58,12 +58,12 @@
                     </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container-fluid profile_info">
             <div class="row text-center">
-                <div class="col-sm-4">
+                <div class="col-4">
                     <div><img class="my_picture mx-auto d-block" src="picture.JPG" alt="me"></div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-4">
                     <p class="intro"><span class="aboutName" style="color:rgb(0, 0, 0); font-weight: 700; font-size: 1.5em;">About Me</span><br><br> I am a junior studying computer science  
                         at Stony Brook University. I have a passion for technology and developing my own skills within it. At the moment, I have interests in 
                         software engineering and web developement, which encouraged me to create this website! However, I am always ready to learn something new 
@@ -71,7 +71,7 @@
                         <span style="font-size: 0.7em; font-style: italic">"Not every puzzle is intended to be solved. Some are in place to test your limits. Others are, in fact, not puzzles at all..."<br>- Vera Nazarian</span>
                         </p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-4">
                     <p class="personal"><span class="personalName" style="color:rgb(0, 0, 0); font-weight: 700; font-size: 1.5em">Personal Info</span><br><br>
                     <span style="color:black; font-weight: 600">Name: </span>Nicholas Leong<br>
                     <span style="color:rgb(0, 0, 0); font-weight: 600">Age: </span>19<br>
@@ -84,13 +84,13 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid no-paddding duck">
+        <div class="container-fluid no-paddding">
             <div class="row">
                     <div id="dash2"></div>
-                    <div class="col-md text-center">
+                    <div class="col-sm text-center">
                         <a href="Resume.pdf" class="resume btn" download><span class="btn-text"><i class="fa fa-download"></i> Resume</span></a>
                     </div>
-                    <div class="col-md text-center">
+                    <div class="col-sm text-center">
                         <a href="Cover.pdf" class="cover btn" download><span class="btn-text"><i class="fa fa-download"></i> Cover Letter</span></a>
                     </div>
             </div>
@@ -119,10 +119,10 @@
                     <i class="icon fa fa-cogs"></i>
                     <div class="timeline-content">
                         <h2>Oct. 2019 - Nov. 2019</h2>
-                        <p><span style="color: #114B61; font-size: 2vw">Smart Mirror</span><br>
-                            Created an in-mirror display shown by using a <span style="color: #114B61;">Raspberry-Pi</span> that displays widgets
+                        <p><span style="color: #E0E0E2; font-size: 2vw; font-weight: bold">Smart Mirror</span><br>
+                            Created an in-mirror display shown by using a <span style="color: #81D2C7;">Raspberry-Pi</span> that displays widgets
                             commonly found on a smart device. Some of these widgets included the date, time, weather, and reminders. These
-                             widgets were created using <span style="color: #114B61;">javascript</span> and <span style="color: #114B61;">CSS</span>.
+                             widgets were created using <span style="color: #81D2C7;">javascript</span> and <span style="color: #81D2C7;">CSS</span>.
                          </p>
                     </div>
                 </div>
@@ -131,10 +131,10 @@
                     <i class="icon fa fa-desktop"></i>
                     <div class="timeline-content">
                         <h2>May 2020 - July 2020</h2>
-                        <p><span style="color: #114B61; font-size: 2vw">Personal Website</span><br>
-                            Designed and coded a portfolio website for professional and personal use. Created entirely using <span style="color: #114B61;">HTML, CSS,</span> and
-                            <span style="color: #114B61;">javascript</span>. 
-                            Addtionally this website was made responsive using <span style="color: #114B61;">Bootstrap 4</span> and <span style="color: #114B61;">JQuery</span>.
+                        <p><span style="color: #E0E0E2; font-size: 2vw">Personal Website</span><br>
+                            Designed and coded a portfolio website for professional and personal use. Created entirely using <span style="color: #81D2C7;">HTML, CSS,</span> and
+                            <span style="color:#81D2C7;">javascript</span>. 
+                            Addtionally this website was made responsive using <span style="color: #81D2C7;">Bootstrap 4</span> and <span style="color: #81D2C7;">JQuery</span>.
                          </p>
                     </div>
                 </div>
