--- a/index.html
+++ b/index.html
@@ -35,17 +35,7 @@
         </div>
     </nav>
         <div id="section1">
-            <div><img class="background" src="background.jpg" alt="background">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md">
-                            <h2 class="name"> Nicholas Leong</h2>
-                            <h3 class="stony"> Stony Brook University '22</h3>
-                            <p>Aspring software engineering/web developer looking for a Summer 2021 internship! </p>
-                        </div>
-                    </div>
-                </div>
-                <div id="wave"></div>
+            <div><img class="background" src="background1.jpg" alt="background">
             </div>
         </div>
     <div id="section2">
