--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                     <i class="icon fa fa-graduation-cap"></i>
                     <div class="timeline-content" style="text-decoration: none">
                         <h2>Sept. 2018</h2>
-                        <p> Began college at Stony Brook University with an area of interest in Computer Science.</p>
+                        <p><span style="color: #E0E0E2; font-size: 2vw; font-weight: bold">Start of Journey</span><br>
+                          Began college at Stony Brook University with an area of interest in Computer Science.
+                        </p>
                     </div>
                 </div>
 
