--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
             </div>
         </div>
         <div class="container-fluid profile_info">
-            <div class="row text-center">
-                <div class="col-4">
-                    <div><img class="my_picture mx-auto d-block" src="picture.JPG" alt="me"></div>
+            <div class="row profile_row text-center">
+                <div class="col-xs-4 center-block">
+                    <div><img class="my_picture mx-auto center-block" src="picture.JPG" alt="me"></div>
                 </div>
-                <div class="col-4">
-                    <p class="intro"><span class="aboutName" style="color:rgb(0, 0, 0); font-weight: 700; font-size: 1.5em;">About Me</span><br><br> I am a junior studying computer science  
+                <div class="col-xs-4">
+                    <p class="intro"><span class="aboutName" style="color:rgb(0, 0, 0); font-weight: 700;">About Me</span><br><br> I am a junior studying computer science  
                         at Stony Brook University. I have a passion for technology and developing my own skills within it. At the moment, I have interests in 
                         software engineering and web developement, which encouraged me to create this website! However, I am always ready to learn something new 
                         and take on challenges that will help me grow as a coder!<br>
                         <span style="font-size: 0.7em; font-style: italic">"Not every puzzle is intended to be solved. Some are in place to test your limits. Others are, in fact, not puzzles at all..."<br>- Vera Nazarian</span>
                         </p>
                 </div>
-                <div class="col-4">
-                    <p class="personal"><span class="personalName" style="color:rgb(0, 0, 0); font-weight: 700; font-size: 1.5em">Personal Info</span><br><br>
+                <div class="col-xs-4">
+                    <p class="personal"><span class="personalName" style="color:rgb(0, 0, 0); font-weight: 700">Personal Info</span><br><br>
                     <span style="color:black; font-weight: 600">Name: </span>Nicholas Leong<br>
                     <span style="color:rgb(0, 0, 0); font-weight: 600">Age: </span>19<br>
                     <span style="color:black; font-weight: 600">Location: </span>New York<br>
@@ -100,10 +100,9 @@
                 <div class="timeline left show-on-scroll">
                     <i class="icon fa fa-graduation-cap"></i>
                     <div class="timeline-content" style="text-decoration: none">
-                        <h2>Sept. 2018</h2>
-                        <p><span style="color: #E0E0E2; font-size: 2vw; font-weight: bold">Start of Journey</span><br>
-                          Began college at Stony Brook University with an area of interest in Computer Science.
-                        </p>
+                        <h2>Sept. 2018 - Present</h2>
+                        <p><span class="title" style="color: #E0E0E2; font-weight: bold;">Start of Journey</span><br>
+                            Began college at Stony Brook University with an area of interest in Computer Science.</p>
                     </div>
                 </div>
 
@@ -111,7 +110,7 @@
                     <i class="icon fa fa-cogs"></i>
                     <div class="timeline-content">
                         <h2>Oct. 2019 - Nov. 2019</h2>
-                        <p><span style="color: #E0E0E2; font-size: 2vw; font-weight: bold">Smart Mirror</span><br>
+                        <p><span class="title" style="color: #E0E0E2; font-weight: bold">Smart Mirror</span><br>
                             Created an in-mirror display shown by using a <span style="color: #81D2C7;">Raspberry-Pi</span> that displays widgets
                             commonly found on a smart device. Some of these widgets included the date, time, weather, and reminders. These
                              widgets were created using <span style="color: #81D2C7;">javascript</span> and <span style="color: #81D2C7;">CSS</span>.
@@ -119,11 +118,11 @@
                     </div>
                 </div>
 
-                <div class="timeline left show-on-scroll">
+                <div class="timeline left website show-on-scroll ">
                     <i class="icon fa fa-desktop"></i>
                     <div class="timeline-content">
                         <h2>May 2020 - July 2020</h2>
-                        <p><span style="color: #E0E0E2; font-size: 2vw">Personal Website</span><br>
+                        <p><span class="title" style="color: #E0E0E2; font-weight: bold">Personal Website</span><br>
                             Designed and coded a portfolio website for professional and personal use. Created entirely using <span style="color: #81D2C7;">HTML, CSS,</span> and
                             <span style="color:#81D2C7;">javascript</span>. 
                             Addtionally this website was made responsive using <span style="color: #81D2C7;">Bootstrap 4</span> and <span style="color: #81D2C7;">JQuery</span>.
@@ -161,7 +160,7 @@
                         <div class="slide slide_1">
                             <div class="slide_content">
                                 <h2>Soon to come</h2> 
-                                <p>...</p>
+                                <p>(After I buy a good camera)</p>
                             </div>
                         </div>
                         <div class="slide slide_2">
@@ -230,13 +229,5 @@
         </div>
     </div> 
 </div>
-<!-- <div class="loader-wrapper">
-    <span class="loader"><span class="loader-inner"></span></span>
-</div>
-  <script>
-      $(window).load(function(){
-        $(".loader-wrapper").fadeOut("10");
-      });
-  </script> -->
 </body>
 </html>
